# vimania-todos

./: .bumpversion.cfg  .confguard  .cruft.json  .envrc  .gitignore  .run  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Makefile  Pipfile  README.md  pyproject.toml  report.xml  setup.cfg  xxx.md
ftplugin/markdown/: python_wrapper.py  python_wrapper.vim
plugin/: python_wrapper.py  python_wrapper.vim
pythonx/: README.md  requirements.txt  setup.cfg
pythonx/vimania/: __init__.py
pythonx/vimania/bms/: handler.py
pythonx/vimania/db/: dal.py
pythonx/vimania/md/: handler.py  mdnav.py
pythonx/vimania/todos/: cli.py  handle_buffer.py  handler.py  model.py
pythonx/vimania/vim_/: vimania_manager.py
pythonx/vimania_todos/: __init__.py
pythonx/vimania_todos/bms/: handler.py
pythonx/vimania_todos/db/: dal.py  todos.db
pythonx/vimania_todos/db/alembic/versions/: ad8492b766f6_create_todo_table.py
pythonx/vimania_todos/helper/: mime.py
pythonx/vimania_todos/todos/: cli.py  handle_buffer.py  handler.py  model.py  pattern.py
pythonx/vimania_todos/vim_/: vim_helper.py  vimania_manager.py
rust/: Cargo.toml
rust/.cargo/: config
rust/migrations/2023-02-19-154222_todos/: down.sql  up.sql
rust/src/: dal.rs  environment.rs  handle_buffer.rs  helper.rs  lib.rs  models.rs  schema.rs  vim_todo.rs
rust/tests/: test_dal.rs  test_lib.rs  test_rs.py
rust/tests/data/: diesel.db  vimania_todos_test.db
scripts/: cp_venv.sh
src/: lib.rs
src/vimania_todos/: __init__.py  environment.py
src/vimania_todos/db/: dal.py  todos.db
src/vimania_todos/db/alembic/: env.py
src/vimania_todos/helper/: helper.py
tests/: conftest.py  run_test.sh  test_environment.py  test_rs.py  test_todos.vader
tests/bms/: test_handler.py
tests/data/: xxx.db
tests/db/: test_dal.py
tests/helper/: test_mime.py
tests/todos/: test_cli.py  test_handle_buffer.py  test_handler.py  test_todos.py
tests/vim_/: test_vimania_manager.py
