[package]
name = "vimania-todos"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "vimania_todos._vimania_todos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vimania_todos"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
