[metadata]
name = vimania-todos
version = 1.3.3
description = "todo manager with VIM"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = sysid
author_email = sysid@gmx.de
url = https://github.com/sysid/vimania-todos
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir=
    =pythonx
	# directory containing all the packages (e.g.  src/mypkg, src/mypkg/subpkg1, ...)
install_requires =
    bs4
    SQLAlchemy
    typer
    pydantic[dotenv]
    requests
    lxml
    pure-sql
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where=pythonx

[options.entry_points]
console_scripts =
    vimania-todos = vimania_todos.todos.cli:app

[isort]
profile = black
src_paths = pythonx/vimania-todos,tests
skip = .gitignore,.dockerignore,.tox,.venv,build,dist,buku.py,rifle.py,buku

[flake8]
max-complexity = 10
max-line-length = 88
ignore =
	E203  ; whitespace before ‘:’ (black)
	F541  ; f-string is missing placeholders
	B008  ; Do not perform function calls in argument defaults.
	E501  ; line too long (will be taken care of by black)
	ASS001 ; do not use bare asserts
exclude =
	.git
	__pycache__
	.venv
	.eggs
	*.egg
	dist

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
exclude = (tests,)
ignore_missing_imports = True
follow_imports = silent
no_implicit_optional = True

[coverage:run]
omit = tests/*,**/__main__.py,**/.venv/*,**/site-packages/*,examples/*,pythonx/vimania_todos/buku.py
branch = True

[coverage:report]
show_missing = True
skip_covered = True
;fail_under = 75

[tool.scriv]
format = md
version = literal: ./pythonx/vimania_todos/__init__.py: __version__
