[package]
name = "vimania-todos"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "vimania_todos._vimania_todos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vimania_todos"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }

anyhow = "1.0.68"
camino = "1.1.2"
chrono = "0.4.23"
#clap = { version = "4.0.32", features = ["unstable-doc"] }
diesel = { version = "2.0.2", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0"
env_logger = "0.10.0"
indoc = "1.0.8"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.0"
shellexpand = "3.0.0"
tempfile = "3.3.0"
termcolor = "1.1.3"

ctor = "0.1.26"
rstest = "0.16.0"
tuikit = "0.5.0"
stdext = "0.3.1"
itertools = "0.10.5"
