[package]
name = "vimania-todos"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "vimania_todos._vimania_todos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vimania_todos"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.18.2", features = ["extension-module", "anyhow"] }
pyo3-log = "0.8.1"

anyhow = "1.0.70"
camino = "1.1.4"
chrono = "0.4.24"
#clap = { version = "4.0.32", features = ["unstable-doc"] }
diesel = { version = "2.0.3", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0"
env_logger = "0.10.0"
indoc = "2.0.1"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.3"
shellexpand = "3.1.0"
tempfile = "3.5.0"
termcolor = "1.2.0"

ctor = "0.2.0"
rstest = "0.17.0"
tuikit = "0.5.0"
stdext = "0.3.1"
itertools = "0.10.5"
